--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
   sdk: ">=2.17.3 <3.0.0"
 
 dependencies:
-  cloud_firestore: ^4.5.0
-  firebase_auth: ^4.4.0
-  firebase_core: ^2.9.0
-  firebase_storage: ^11.1.0
+#  cloud_firestore: ^4.5.0
+#  firebase_auth: ^4.4.0
+#  firebase_core: ^2.9.0
+#  firebase_storage: ^11.1.0
   connectivity: ^3.0.6
 
   flutter:
@@ -23,8 +23,18 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_shake_animated: ^0.0.5
 
-dependency_overrides:
-  firebase_core_platform_interface: 4.5.2
+  firebase_core: ^2.11.0
+  cloud_firestore: ^4.6.0
+  firebase_storage: ^11.1.2
+  firebase_auth: ^4.5.0
+
+  image: ^3.1.0
+  camera: ^0.9.4+5
+  tflite_flutter: ^0.9.0
+  tflite_flutter_helper: ^0.3.1
+
+#dependency_overrides:
+#  firebase_core_platform_interface: 4.5.2
 
 dev_dependencies:
   flutter_test:
