--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   camera: ^0.9.4+5
   tflite_flutter: ^0.9.0
   tflite_flutter_helper: ^0.3.1
+  photo_view: ^0.14.0
+  image_picker: ^0.8.7+5
 
 #dependency_overrides:
 #  firebase_core_platform_interface: 4.5.2
